--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,13 +7,13 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^0.1.0
-  url_launcher: "^3.0.0"
-  intl: "^0.15.2"
+  cupertino_icons: ^0.1.2
+  url_launcher: "^5.1.0"
+  intl: "^0.15.8"
   flutter_search_bar: "^2.0.2"
-  rxdart: "^0.16.5"
-  scoped_model: "^0.2.0"
-  shared_preferences: "^0.4.1"
+  rxdart: "^0.22.1"
+  scoped_model: "^1.0.1"
+  shared_preferences: "^0.5.3+4"
 
 dev_dependencies:
   flutter_test:
